aau/sf_autobackup/objects/Direction_Leg__c.object
<CustomObject>
    <description>Leg of a calculated route **Different from Bus Route. Bus Route is for AAU defined routes</description>
    <fields>
        <fullName>Bus_Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bus Route</label>
        <referenceTo>Bus_Route__c</referenceTo>
        <relationshipLabel>Direction Legs</relationshipLabel>
        <relationshipName>Direction_Legs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bus_Stop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bus Stop</label>
        <referenceTo>Bus_Stop__c</referenceTo>
        <relationshipLabel>Direction Legs</relationshipLabel>
        <relationshipName>Direction_Legs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <referenceTo>Direction__c</referenceTo>
        <relationshipLabel>Direction Legs</relationshipLabel>
        <relationshipName>Direction_Legs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Direction Leg</label>
    <nameField>
        <label>Direction Leg Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Direction Legs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>